--- a/dieta-mediterranea/index.html
+++ b/dieta-mediterranea/index.html
@@ -1,1 +1,226 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Dieta para Perder Barriga • Guia Completo e Científico</title>
+
+  <meta name="description" content="Dieta para perder barriga: guia completo com estratégias comprovadas para reduzir a gordura abdominal e emagrecer com saúde. Tudo baseado em ciência.">
+
+  <!-- FONTS & TAILWIND -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <style>
+    body { font-family: 'Inter', sans-serif; }
+  </style>
+</head>
+
+<body class="bg-gray-50 text-gray-800">
+
+  <!-- HEADER -->
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <div class="max-w-6xl mx-auto px-5 py-4 flex items-center justify-between">
+      <h1 class="text-2xl font-extrabold text-gray-900">Dieta para Perder Barriga</h1>
+      <a href="https://dietapronta.online"
+         class="text-white bg-green-500 hover:bg-green-600 px-4 py-2 rounded-lg font-semibold shadow-md">
+        Site Oficial
+      </a>
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <section class="relative bg-white">
+    <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 px-6 py-16 items-center">
+      
+      <!-- TEXT -->
+      <div>
+        <h2 class="text-4xl md:text-5xl font-extrabold leading-tight text-gray-900 mb-6">
+          Dieta para Perder Barriga:<br> Guia Completo, Atualizado e Baseado em Ciência
+        </h2>
+
+        <p class="text-lg text-gray-600 mb-8">
+          A <strong>dieta para perder barriga</strong> mais eficiente combina nutrição, ciência e
+          escolhas inteligentes do dia a dia. Descubra como reduzir gordura abdominal
+          de forma prática, rápida e saudável.
+        </p>
+
+        <!-- CTA -->
+        <a href="https://dietapronta.online"
+           class="inline-block bg-green-500 hover:bg-green-600 text-white text-lg font-semibold px-8 py-4 rounded-xl shadow-lg">
+          🔍 Descobrir minha dieta perfeita agora
+        </a>
+      </div>
+
+      <!-- IMAGE -->
+      <div>
+        <img
+          src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?q=80&w=1200"
+          alt="Dieta para perder barriga"
+          class="rounded-2xl shadow-xl w-full object-cover">
+      </div>
+
+    </div>
+  </section>
+
+  <!-- SECTION: CAUSAS -->
+  <section class="py-16 bg-gray-100">
+    <div class="max-w-5xl mx-auto px-6">
+
+      <h2 class="text-3xl font-bold mb-6 text-gray-900">O que realmente causa gordura abdominal?</h2>
+
+      <p class="text-lg mb-6">
+        Antes de iniciar qualquer <strong>dieta para perder barriga</strong>, é essencial entender
+        o que realmente causa o acúmulo de gordura na região abdominal. Fatores como estresse,
+        inflamação, má alimentação e noites mal dormidas influenciam muito.
+      </p>
+
+      <div class="grid md:grid-cols-3 gap-6 mt-8">
+
+        <div class="bg-white rounded-xl p-6 shadow-md">
+          <img src="https://images.unsplash.com/photo-1601455763558-097ff68e8b66?q=80&w=600"
+               class="rounded-lg mb-4">
+          <h3 class="text-xl font-semibold mb-2">Inflamação</h3>
+          <p class="text-gray-600">Alimentos ruins inflamam o corpo e dificultam a perda de barriga.</p>
+        </div>
+
+        <div class="bg-white rounded-xl p-6 shadow-md">
+          <img src="https://images.unsplash.com/photo-1518611012118-696072aa579a?q=80&w=600"
+               class="rounded-lg mb-4">
+          <h3 class="text-xl font-semibold mb-2">Estresse Elevado</h3>
+          <p class="text-gray-600">O cortisol alto faz o corpo acumular gordura na região abdominal.</p>
+        </div>
+
+        <div class="bg-white rounded-xl p-6 shadow-md">
+          <img src="https://images.unsplash.com/photo-1526403226890-1f41cb0c9f1c?q=80&w=600"
+               class="rounded-lg mb-4">
+          <h3 class="text-xl font-semibold mb-2">Sono Ruim</h3>
+          <p class="text-gray-600">Dormir mal reduz o metabolismo e aumenta o apetite.</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA MID -->
+  <section class="text-center py-14">
+    <a href="https://dietapronta.online"
+       class="inline-block bg-green-500 hover:bg-green-600 text-white text-xl font-semibold px-12 py-5 rounded-xl shadow-lg">
+      👉 Clique aqui e descubra sua dieta para perder barriga
+    </a>
+  </section>
+
+  <!-- SECTION: COMO FUNCIONA -->
+  <section class="py-16">
+    <div class="max-w-5xl mx-auto px-6">
+
+      <div class="grid md:grid-cols-2 gap-10 items-center">
+
+        <div>
+          <h2 class="text-3xl font-bold mb-6 text-gray-900">Como funciona uma dieta para perder barriga?</h2>
+
+          <p class="text-lg mb-4">
+            A redução da gordura abdominal acontece quando ajustamos três pilares essenciais:
+            inflamação, glicemia e metabolismo. Uma boa dieta melhora todos eles ao mesmo tempo.
+          </p>
+
+          <ul class="space-y-3 text-lg">
+            <li>✔ Reduz inflamação</li>
+            <li>✔ Controla a glicose</li>
+            <li>✔ Aumenta a saciedade</li>
+            <li>✔ Acelera o metabolismo</li>
+          </ul>
+        </div>
+
+        <div>
+          <img
+            src="https://images.unsplash.com/photo-1556911073-52527ac437f5?q=80&w=1200"
+            class="rounded-2xl shadow-xl">
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- SECTION: ERROS -->
+  <section class="py-16 bg-gray-100">
+    <div class="max-w-5xl mx-auto px-6">
+
+      <h2 class="text-3xl font-bold mb-6">Erros comuns que impedem perder barriga</h2>
+
+      <div class="grid md:grid-cols-2 gap-8 mt-8">
+        <div>
+          <img src="https://images.unsplash.com/photo-1605296867304-91c9e0a44241?q=80&w=1200"
+               class="rounded-2xl shadow-lg mb-4">
+        </div>
+
+        <div class="text-lg">
+          <ul class="list-disc pl-6 space-y-2">
+            <li>Pular refeições</li>
+            <li>Comer frutas em excesso</li>
+            <li>Tomar sucos naturais acreditando que são leves</li>
+            <li>Comer pouco durante o dia e muito à noite</li>
+            <li>Exagerar em carboidratos simples</li>
+            <li>Beber pouca água</li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- SECTION: EXERCICIOS -->
+  <section class="py-16">
+    <div class="max-w-5xl mx-auto px-6">
+
+      <h2 class="text-3xl font-bold mb-6">Exercícios que potencializam a dieta</h2>
+
+      <div class="grid md:grid-cols-3 gap-6 mt-8">
+        
+        <div class="bg-white p-6 rounded-xl shadow-md">
+          <img src="https://images.unsplash.com/photo-1550345332-09e3ac987658?q=80&w=600"
+               class="rounded-lg mb-4">
+          <h3 class="text-xl font-semibold">HIIT</h3>
+          <p class="text-gray-600">Aumenta a queima calórica mesmo após o treino.</p>
+        </div>
+
+        <div class="bg-white p-6 rounded-xl shadow-md">
+          <img src="https://images.unsplash.com/photo-1599058918144-d84146babf48?q=80&w=600"
+               class="rounded-lg mb-4">
+          <h3 class="text-xl font-semibold">Caminhada Rápida</h3>
+          <p class="text-gray-600">Melhora sensibilidade à insulina.</p>
+        </div>
+
+        <div class="bg-white p-6 rounded-xl shadow-md">
+          <img src="https://images.unsplash.com/photo-1574680096145-d05b474e2155?q=80&w=600"
+               class="rounded-lg mb-4">
+          <h3 class="text-xl font-semibold">Musculação</h3>
+          <p class="text-gray-600">Aumenta o metabolismo e seca a gordura abdominal.</p>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
+  <!-- CTA FINAL -->
+  <section class="text-center py-16 bg-green-50">
+    <h2 class="text-3xl font-bold mb-6">Descubra qual dieta elimina sua barriga mais rápido</h2>
+    <p class="text-lg text-gray-700 mb-8">Resultado imediato — 100% gratuito — baseado no seu perfil.</p>
+
+    <a href="https://dietapronta.online"
+       class="inline-block bg-green-500 hover:bg-green-600 text-white text-xl font-semibold px-12 py-5 rounded-xl shadow-lg">
+      💚 Fazer o teste agora
+    </a>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="bg-gray-900 text-gray-300 py-10 text-center">
+    <p>© Dieta Pronta Online — Todos os direitos reservados.</p>
+  </footer>
+
+</body>
+</html>
 
