--- a/dieta-para-perder-barriga/index.html
+++ b/dieta-para-perder-barriga/index.html
@@ -1,260 +1,200 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Dieta para Perder Barriga • Guia Completo, Científico e Atualizado</title>
-
-  <meta name="description" content="Guia completo de dieta para perder barriga: estratégias científicas, rotina diária, erros que impedem o emagrecimento e dicas práticas para reduzir a gordura abdominal. Página completa, atualizada e moderna.">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-  </style>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Dieta para Perder Barriga • Guia Definitivo 2025</title>
+<meta name="description" content="Guia científico completo sobre dieta para perder barriga, metabolismo, hormônios, microbiota, estratégias avançadas e rotina prática para reduzir gordura abdominal rapidamente.">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+<script src="https://cdn.tailwindcss.com"></script>
+<style>body{font-family:'Inter',sans-serif;}</style>
 </head>
-
 <body class="bg-gray-50 text-gray-800">
 
-  <!-- HEADER -->
-  <header class="bg-white shadow-sm sticky top-0 z-50">
-    <div class="max-w-6xl mx-auto px-5 py-4 flex items-center justify-between">
-      <h1 class="text-2xl font-extrabold text-gray-900">
-        Dieta para Perder Barriga
-      </h1>
-      <a href="https://dietapronta.online"
-         class="text-white bg-green-500 hover:bg-green-600 px-4 py-2 rounded-lg font-semibold shadow">
-        Site Oficial
-      </a>
-    </div>
-  </header>
+<header class="bg-white shadow-sm sticky top-0 z-50">
+<div class="max-w-6xl mx-auto px-5 py-4 flex items-center justify-between">
+<h1 class="text-2xl font-extrabold text-gray-900">Dieta para Perder Barriga</h1>
+<a href="https://dietapronta.online" class="text-white bg-green-500 hover:bg-green-600 px-4 py-2 rounded-lg font-semibold shadow">Site Oficial</a>
+</div>
+</header>
 
-  <!-- HERO -->
-  <section class="relative bg-white">
-    <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 px-6 py-16 items-center">
+<section class="relative bg-white">
+<div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 px-6 py-16 items-center">
+<div>
+<h2 class="text-4xl md:text-5xl font-extrabold leading-tight text-gray-900 mb-6">
+Dieta para Perder Barriga:<br> Guia Científico, Atualizado e Completo
+</h2>
+<p class="text-lg text-gray-600 mb-8">
+Este é o guia mais completo de <strong>dieta para perder barriga</strong> disponível em 2025. Aqui você vai aprender como o corpo realmente elimina gordura abdominal, como acelerar o metabolismo, equilibrar hormônios e aplicar estratégias rápidas e práticas para ter resultados visíveis em poucas semanas.
+</p>
+<a href="https://dietapronta.online" class="inline-block bg-green-500 hover:bg-green-600 text-white text-lg font-semibold px-8 py-4 rounded-xl shadow-md">🔍 Descubra sua dieta perfeita agora</a>
+</div>
+<div>
+<img src="https://images.pexels.com/photos/3823086/pexels-photo-3823086.jpeg" class="rounded-2xl shadow-xl w-full">
+</div>
+</div>
+</section>
 
-      <div>
-        <h2 class="text-4xl md:text-5xl font-extrabold text-gray-900 leading-tight mb-6">
-          Dieta para Perder Barriga:<br> Guia Definitivo, Científico e Atualizado
-        </h2>
+<section class="py-16 bg-gray-100">
+<div class="max-w-5xl mx-auto px-6">
+<h2 class="text-3xl font-bold mb-6 text-gray-900">O que realmente causa a gordura abdominal?</h2>
+<p class="text-lg mb-6">
+A gordura abdominal é resultado de um conjunto de fatores hormonais, metabólicos, digestivos e comportamentais. A boa notícia é: todos eles podem ser ajustados com uma estratégia nutricional correta.
+</p>
 
-        <p class="text-lg text-gray-600 mb-8">
-          Descubra como uma <strong>dieta para perder barriga</strong> funciona de verdade,
-          quais estratégias realmente reduzem a gordura abdominal e como aplicar tudo no seu dia a dia
-          para ter resultados rápidos, consistentes e saudáveis.
-        </p>
+<div class="grid md:grid-cols-3 gap-8">
+<div class="bg-white p-6 rounded-xl shadow">
+<img src="https://images.pexels.com/photos/4101143/pexels-photo-4101143.jpeg" class="rounded-lg mb-4">
+<h3 class="text-xl font-semibold mb-2">Cortisol elevado</h3>
+<p>O hormônio do estresse aumenta o acúmulo de gordura na região abdominal.</p>
+</div>
 
-        <a href="https://dietapronta.online"
-           class="inline-block bg-green-500 hover:bg-green-600 text-white text-lg font-semibold px-8 py-4 rounded-xl shadow-md">
-          🔍 Descubra sua dieta perfeita agora
-        </a>
-      </div>
+<div class="bg-white p-6 rounded-xl shadow">
+<img src="https://images.pexels.com/photos/6941886/pexels-photo-6941886.jpeg" class="rounded-lg mb-4">
+<h3 class="text-xl font-semibold mb-2">Inflamação interna</h3>
+<p>Alimentação ruim gera inflamação, dificultando totalmente a perda de barriga.</p>
+</div>
 
-      <div>
-        <!-- IMAGEM GARANTIDA -->
-        <img src="https://images.pexels.com/photos/3823086/pexels-photo-3823086.jpeg"
-             alt="Dieta para perder barriga"
-             class="rounded-2xl shadow-xl w-full object-cover">
-      </div>
+<div class="bg-white p-6 rounded-xl shadow">
+<img src="https://images.pexels.com/photos/3769997/pexels-photo-3769997.jpeg" class="rounded-lg mb-4">
+<h3 class="text-xl font-semibold mb-2">Sono desregulado</h3>
+<p>Dormir pouco aumenta a fome e reduz a queima de gordura.</p>
+</div>
+</div>
+</div>
+</section>
 
-    </div>
-  </section>
+<section class="py-16">
+<div class="max-w-6xl mx-auto px-6">
+<h2 class="text-3xl font-bold mb-6 text-gray-900">Como funciona uma dieta para perder barriga?</h2>
+<p class="text-lg mb-6">
+A perda de gordura abdominal depende de quatro pilares principais: inflamação, glicemia, hormônios e metabolismo. Quando esses pilares são ajustados, a queima de gordura se torna muito mais rápida.
+</p>
 
-  <!-- O QUE CAUSA -->
-  <section class="py-16 bg-gray-100">
-    <div class="max-w-5xl mx-auto px-6">
+<div class="grid md:grid-cols-2 gap-10 items-center">
 
-      <h2 class="text-3xl font-bold mb-6 text-gray-900">
-        O que realmente causa a gordura abdominal?
-      </h2>
+<div>
+<h3 class="text-2xl font-semibold mb-3">1. Controle glicêmico</h3>
+<p>Evitar picos de glicose impede o corpo de armazenar gordura abdominal.</p>
 
-      <p class="text-lg mb-6">
-        Para entender como uma <strong>dieta para perder barriga</strong> funciona, precisamos
-        entender primeiro por que o corpo acumula gordura nessa região. A barriga não é apenas
-        resultado de comer muito — ela é o reflexo de fatores hormonais, emocionais e metabólicos.
-      </p>
+<h3 class="text-2xl font-semibold mt-6 mb-3">2. Saciedade prolongada</h3>
+<p>Com mais proteínas e fibras, você reduz compulsão e fome emocional.</p>
 
-      <div class="grid md:grid-cols-3 gap-8">
+<h3 class="text-2xl font-semibold mt-6 mb-3">3. Termogênese natural</h3>
+<p>Certos alimentos e hábitos aumentam a queima calórica mesmo em repouso.</p>
 
-        <div class="bg-white p-6 rounded-xl shadow">
-          <img src="https://images.pexels.com/photos/4101143/pexels-photo-4101143.jpeg"
-               class="rounded-lg mb-4">
-          <h3 class="text-xl font-semibold mb-2">Cortisol elevado</h3>
-          <p class="text-gray-700">
-            Situações de estresse aumentam o cortisol, hormônio que favorece o acúmulo de gordura abdominal.
-          </p>
-        </div>
+<h3 class="text-2xl font-semibold mt-6 mb-3">4. Regulação hormonal</h3>
+<p>Cortisol, insulina, leptina e grelina precisam estar equilibrados.</p>
+</div>
 
-        <div class="bg-white p-6 rounded-xl shadow">
-          <img src="https://images.pexels.com/photos/6941886/pexels-photo-6941886.jpeg"
-               class="rounded-lg mb-4">
-          <h3 class="text-xl font-semibold mb-2">Inflamação silenciosa</h3>
-          <p class="text-gray-700">
-            O consumo frequente de ultraprocessados inflama o corpo e desacelera o metabolismo.
-          </p>
-        </div>
+<div>
+<img src="https://images.pexels.com/photos/8927570/pexels-photo-8927570.jpeg" class="rounded-2xl shadow-xl">
+</div>
 
-        <div class="bg-white p-6 rounded-xl shadow">
-          <img src="https://images.pexels.com/photos/3769997/pexels-photo-3769997.jpeg"
-               class="rounded-lg mb-4">
-          <h3 class="text-xl font-semibold mb-2">Sono de má qualidade</h3>
-          <p class="text-gray-700">
-            Dormir mal afeta hormônios da fome, aumenta o apetite e reduz a queima de gordura.
-          </p>
-        </div>
+</div>
+</div>
+</section>
 
-      </div>
-    </div>
-  </section>
+<section class="py-16 bg-gray-100">
+<div class="max-w-5xl mx-auto px-6">
+<h2 class="text-3xl font-bold mb-6">Microbiota intestinal e perda de barriga</h2>
+<p class="text-lg mb-6">
+A ciência recente mostra que mais de <strong>70% da queima de gordura abdominal</strong>
+depende da saúde intestinal. Quando a microbiota está desequilibrada, o corpo:
+</p>
 
-  <!-- CTA -->
-  <section class="text-center py-14">
-    <a href="https://dietapronta.online"
-       class="inline-block bg-green-500 hover:bg-green-600 text-white text-xl font-semibold px-12 py-5 rounded-xl shadow-lg">
-      👉 Veja qual dieta reduz sua barriga mais rápido
-    </a>
-  </section>
+<ul class="space-y-3 text-lg">
+<li>❌ digere pior</li>
+<li>❌ retém mais líquidos</li>
+<li>❌ reduz metabolismo</li>
+<li>❌ produz mais hormônios da fome</li>
+<li>❌ acumula mais gordura abdominal</li>
+</ul>
 
-  <!-- COMO FUNCIONA -->
-  <section class="py-16">
-    <div class="max-w-6xl mx-auto px-6">
-      <div class="grid md:grid-cols-2 gap-10 items-center">
+<p class="text-lg mt-4">
+Uma boa dieta para perder barriga melhora a flora intestinal em poucos dias.
+</p>
+</div>
+</section>
 
-        <div>
-          <img src="https://images.pexels.com/photos/8927570/pexels-photo-8927570.jpeg"
-               class="rounded-2xl shadow-xl">
-        </div>
+<section class="py-16">
+<div class="max-w-6xl mx-auto px-6">
+<h2 class="text-3xl font-bold mb-6">Erros que impedem perder barriga</h2>
 
-        <div>
-          <h2 class="text-3xl font-bold mb-6 text-gray-900">Como funciona uma dieta para perder barriga?</h2>
+<div class="grid md:grid-cols-2 gap-10">
+<ul class="list-disc pl-6 space-y-3 text-lg">
+<li>Comer pouco demais e desacelerar o metabolismo</li>
+<li>Tomar sucos naturais acreditando que são “leves”</li>
+<li>Exagerar em frutas</li>
+<li>Consumir carboidratos simples à noite</li>
+<li>Não beber água suficiente</li>
+<li>Treinar errado ou em excesso</li>
+<li>Dormir pouco</li>
+</ul>
 
-          <p class="text-lg mb-4">
-            A perda de gordura abdominal não depende apenas de calorias. Ela depende de
-            uma combinação de processos internos que precisam ser ajustados:
-          </p>
+<img src="https://images.pexels.com/photos/4613865/pexels-photo-4613865.jpeg" class="rounded-2xl shadow-xl">
+</div>
+</div>
+</section>
 
-          <ul class="space-y-3 text-lg text-gray-700">
-            <li>✔ Redução de inflamação</li>
-            <li>✔ Controle de picos de glicemia</li>
-            <li>✔ Equilíbrio hormonal</li>
-            <li>✔ Melhora da digestão</li>
-            <li>✔ Maior saciedade e menor compulsão</li>
-            <li>✔ Aceleração natural do metabolismo</li>
-          </ul>
+<section class="py-16">
+<div class="max-w-6xl mx-auto px-6">
 
-          <p class="mt-5 text-lg">
-            Quando esses fatores estão alinhados, a barriga começa a reduzir rapidamente.
-          </p>
-        </div>
+<h2 class="text-3xl font-bold mb-6">Exercícios que aceleram o processo</h2>
 
-      </div>
-    </div>
-  </section>
+<div class="grid md:grid-cols-3 gap-8">
 
-  <!-- ERROS COMUNS -->
-  <section class="py-16 bg-gray-100">
-    <div class="max-w-5xl mx-auto px-6">
+<div class="bg-white p-6 rounded-xl shadow">
+<img src="https://images.pexels.com/photos/3823063/pexels-photo-3823063.jpeg" class="rounded-lg mb-4">
+<h3 class="text-xl font-semibold mb-2">HIIT</h3>
+<p>Aumenta a queima por até 48h.</p>
+</div>
 
-      <h2 class="text-3xl font-bold mb-6">Erros que impedem perder barriga</h2>
+<div class="bg-white p-6 rounded-xl shadow">
+<img src="https://images.pexels.com/photos/4428295/pexels-photo-4428295.jpeg" class="rounded-lg mb-4">
+<h3 class="text-xl font-semibold mb-2">Caminhada rápida</h3>
+<p>Melhora sensibilidade à insulina.</p>
+</div>
 
-      <p class="text-lg mb-6">
-        Muitas pessoas acham que estão “fazendo tudo certo”, mas cometem erros que
-        sabotam 100% do processo.
-      </p>
+<div class="bg-white p-6 rounded-xl shadow">
+<img src="https://images.pexels.com/photos/416778/pexels-photo-416778.jpeg" class="rounded-lg mb-4">
+<h3 class="text-xl font-semibold mb-2">Musculação</h3>
+<p>Ativa o metabolismo e define o abdômen.</p>
+</div>
 
-      <div class="grid md:grid-cols-2 gap-10">
-        <div>
-          <ul class="list-disc pl-6 space-y-3 text-lg text-gray-700">
-            <li>Reduzir demais as calorias e entrar em modo de defesa</li>
-            <li>Exagerar em frutas e acreditar que “fruta não engorda”</li>
-            <li>Tomar sucos naturais achando que são leves</li>
-            <li>Comer carboidrato simples à noite</li>
-            <li>Treinar em excesso e sem estratégia</li>
-            <li>Beber pouca água ao longo do dia</li>
-            <li>Não dormir o suficiente para perder gordura</li>
-          </ul>
-        </div>
+</div>
 
-        <div>
-          <img src="https://images.pexels.com/photos/4613865/pexels-photo-4613865.jpeg"
-               class="rounded-2xl shadow-xl">
-        </div>
-      </div>
+</div>
+</section>
 
-    </div>
-  </section>
+<section class="py-16 bg-green-50">
+<div class="max-w-6xl mx-auto px-6">
+<h2 class="text-3xl font-bold mb-6">Rotina prática para perder barriga</h2>
+<p class="text-lg mb-6">Uma rotina otimizada acelera muito os resultados.</p>
 
-  <!-- EXERCICIOS -->
-  <section class="py-16">
-    <div class="max-w-6xl mx-auto px-6">
+<ul class="space-y-3 text-lg">
+<li><strong>07h – 09h:</strong> refeição proteica</li>
+<li><strong>12h – 14h:</strong> refeição equilibrada</li>
+<li><strong>15h – 17h:</strong> lanche com proteína</li>
+<li><strong>19h – 21h:</strong> refeição leve</li>
+<li><strong>Água:</strong> 2–3L por dia</li>
+<li><strong>Treino:</strong> 20–40min</li>
+<li><strong>Sono:</strong> 7.5–9h</li>
+</ul>
+</div>
+</section>
 
-      <h2 class="text-3xl font-bold mb-6">Exercícios que aceleram a perda de barriga</h2>
+<section class="py-16 text-center">
+<h2 class="text-3xl font-bold mb-4">Sua dieta ideal está a um clique</h2>
+<p class="text-lg text-gray-700 mb-8">Descubra agora qual dieta reduz sua barriga mais rápido.</p>
+<a href="https://dietapronta.online" class="inline-block bg-green-500 hover:bg-green-600 text-white text-xl font-semibold px-12 py-5 rounded-xl shadow-lg">
+💚 Fazer o teste agora
+</a>
+</section>
 
-      <div class="grid md:grid-cols-3 gap-6 mt-8">
-
-        <div class="bg-white p-6 rounded-xl shadow-md">
-          <img src="https://images.pexels.com/photos/3823063/pexels-photo-3823063.jpeg"
-               class="rounded-lg mb-4">
-          <h3 class="text-xl font-semibold">HIIT</h3>
-          <p class="text-gray-600 text-lg">Aumenta o gasto calórico mesmo após o treino.</p>
-        </div>
-
-        <div class="bg-white p-6 rounded-xl shadow-md">
-          <img src="https://images.pexels.com/photos/4428295/pexels-photo-4428295.jpeg"
-               class="rounded-lg mb-4">
-          <h3 class="text-xl font-semibold">Caminhada rápida</h3>
-          <p class="text-gray-600 text-lg">Melhora a sensibilidade à insulina.</p>
-        </div>
-
-        <div class="bg-white p-6 rounded-xl shadow-md">
-          <img src="https://images.pexels.com/photos/416778/pexels-photo-416778.jpeg"
-               class="rounded-lg mb-4">
-          <h3 class="text-xl font-semibold">Musculação</h3>
-          <p class="text-gray-600 text-lg">Aumenta o metabolismo e define o abdômen.</p>
-        </div>
-
-      </div>
-
-    </div>
-  </section>
-
-  <!-- ROTINA -->
-  <section class="py-16 bg-green-50">
-    <div class="max-w-5xl mx-auto px-6">
-
-      <h2 class="text-3xl font-bold mb-6">Rotina prática para perder barriga mais rápido</h2>
-
-      <div class="space-y-4 text-lg text-gray-700">
-        <p><strong>07h às 09h:</strong> refeição rica em proteínas</p>
-        <p><strong>12h às 14h:</strong> prato equilibrado com fibras e bons carboidratos</p>
-        <p><strong>15h às 17h:</strong> lanche com proteína e baixa glicemia</p>
-        <p><strong>19h às 21h:</strong> jantar leve com proteínas e fibras</p>
-        <p><strong>Água:</strong> 2 a 3 litros ao longo do dia</p>
-        <p><strong>Treino:</strong> 20 a 40 minutos (HIIT, força, caminhada)</p>
-        <p><strong>Sono:</strong> 7,5 a 9 horas</p>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- CTA FINAL -->
-  <section class="py-16 text-center">
-    <h2 class="text-3xl font-bold mb-4">Sua dieta ideal está a um clique</h2>
-    <p class="text-lg text-gray-700 mb-8">
-      Resultados melhores aparecem quando sua dieta é montada 100% para o seu corpo.
-    </p>
-    <a href="https://dietapronta.online"
-       class="inline-block bg-green-500 hover:bg-green-600 text-white text-xl font-semibold px-12 py-5 rounded-xl shadow-lg">
-      💚 Fazer o teste agora
-    </a>
-  </section>
-
-  <footer class="bg-gray-900 text-gray-300 py-10 text-center">
-    <p>© Dieta Pronta Online — Todos os direitos reservados.</p>
-  </footer>
+<footer class="bg-gray-900 text-gray-300 py-10 text-center">
+<p>© Dieta Pronta Online — Todos os direitos reservados.</p>
+</footer>
 
 </body>
 </html>
