--- a/index.html
+++ b/index.html
@@ -155,6 +155,67 @@ fieldset.step legend {
   </style>
 </head>
 <body class="bg-slate-50 text-slate-900">
+
+
+<!-- MENU MODERNO 2025 -->
+<nav class="w-full bg-white/80 backdrop-blur-md border-b border-slate-200 fixed top-0 left-0 z-50">
+  <div class="container mx-auto px-4 h-14 flex items-center justify-between">
+    
+    <!-- Logo -->
+    <a href="/" class="flex items-center gap-2 font-extrabold text-slate-800 text-lg">
+      <img src="/favicon-32x32.png" class="w-6 h-6" alt="">
+      Dieta Pronta Online
+    </a>
+
+    <!-- Menu Desktop -->
+    <div class="hidden md:flex items-center gap-6 text-sm font-medium text-slate-700">
+      <a href="/" class="hover:text-emerald-600 transition">Início</a>
+      <a href="/dieta-para-perder-barriga" class="hover:text-emerald-600 transition">Dieta para Perder Barriga</a>
+      <a href="#quiz" class="hover:text-emerald-600 transition">Quiz</a>
+      <a href="/contato" class="hover:text-emerald-600 transition">Contato</a>
+
+      <a href="#quiz" class="px-4 py-2 bg-emerald-600 text-white rounded-xl font-semibold shadow hover:bg-emerald-700 transition">
+        Fazer meu Plano
+      </a>
+    </div>
+
+    <!-- Botão Mobile -->
+    <button id="menuBtn" class="md:hidden p-2 rounded-lg border border-slate-300">
+      <svg id="menuIcon" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="1.5">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3 6h18M3 12h18M3 18h18" />
+      </svg>
+    </button>
+
+  </div>
+
+  <!-- MENU MOBILE -->
+  <div id="mobileMenu" class="hidden md:hidden bg-white border-t border-slate-200 px-4 py-3 space-y-3">
+    <a href="/" class="block py-2 text-slate-700 font-medium">Início</a>
+    <a href="/dieta-para-perder-barriga" class="block py-2 text-slate-700 font-medium">Dieta para Perder Barriga</a>
+    <a href="#quiz" class="block py-2 text-slate-700 font-medium">Quiz</a>
+    <a href="/contato" class="block py-2 text-slate-700 font-medium">Contato</a>
+    <a href="#quiz" class="block text-center px-4 py-3 bg-emerald-600 text-white rounded-xl font-semibold">Fazer meu Plano</a>
+  </div>
+</nav>
+
+<!-- Ajuste de espaço para não sobrepor o conteúdo -->
+<div class="h-14"></div>
+
+<script>
+  const menuBtn = document.getElementById("menuBtn");
+  const mobileMenu = document.getElementById("mobileMenu");
+
+  menuBtn.addEventListener("click", () => {
+    mobileMenu.classList.toggle("hidden");
+  });
+</script>
+
+
+  
+
+
+
+  
   <!-- Header -->
   <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
