--- a/index.html
+++ b/index.html
@@ -157,12 +157,15 @@ fieldset.step legend {
 <body class="bg-slate-50 text-slate-900">
 
 
-<!-- MENU MODERNO 2025 -->
-<nav class="w-full bg-white/80 backdrop-blur-md border-b border-slate-200 fixed top-0 left-0 z-50">
+
+  
+
+  <!-- MENU MODERNO 2025 -->
+<nav class="w-full bg-slate-100/95 backdrop-blur-md border-b border-slate-300 fixed top-0 left-0 z-[9999] shadow">
   <div class="container mx-auto px-4 h-14 flex items-center justify-between">
     
     <!-- Logo -->
-    <a href="/" class="flex items-center gap-2 font-extrabold text-slate-800 text-lg">
+    <a href="/" class="flex items-center gap-2 font-extrabold text-slate-900 text-lg">
       <img src="/favicon-32x32.png" class="w-6 h-6" alt="">
       Dieta Pronta Online
     </a>
@@ -180,7 +183,7 @@ fieldset.step legend {
     </div>
 
     <!-- Botão Mobile -->
-    <button id="menuBtn" class="md:hidden p-2 rounded-lg border border-slate-300">
+    <button id="menuBtn" class="md:hidden p-2 rounded-lg border border-slate-400 text-slate-800">
       <svg id="menuIcon" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="1.5">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3 6h18M3 12h18M3 18h18" />
       </svg>
@@ -189,7 +192,7 @@ fieldset.step legend {
   </div>
 
   <!-- MENU MOBILE -->
-  <div id="mobileMenu" class="hidden md:hidden bg-white border-t border-slate-200 px-4 py-3 space-y-3">
+  <div id="mobileMenu" class="hidden md:hidden bg-slate-100 border-t border-slate-300 px-4 py-3 space-y-3">
     <a href="/" class="block py-2 text-slate-700 font-medium">Início</a>
     <a href="/dieta-para-perder-barriga" class="block py-2 text-slate-700 font-medium">Dieta para Perder Barriga</a>
     <a href="#quiz" class="block py-2 text-slate-700 font-medium">Quiz</a>
@@ -198,7 +201,7 @@ fieldset.step legend {
   </div>
 </nav>
 
-<!-- Ajuste de espaço para não sobrepor o conteúdo -->
+<!-- Espaço para não sobrepor conteúdo -->
 <div class="h-14"></div>
 
 <script>
