--- a/index.html
+++ b/index.html
@@ -214,13 +214,11 @@ fieldset.step legend {
 </script>
 
 
-  
-
-
 
   
   <!-- Header -->
-  <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
+  <header class="bg-white border-b border-slate-200 mt-14">
+
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
         <div class="h-9 w-9 rounded-2xl bg-[var(--brand)]/10 flex items-center justify-center">
