--- a/index.html
+++ b/index.html
@@ -158,66 +158,171 @@ fieldset.step legend {
 
 
 
+
+
+
+
+
   
 
-  <!-- MENU MODERNO 2025 -->
-<nav class="w-full bg-slate-100/95 backdrop-blur-md border-b border-slate-300 fixed top-0 left-0 z-[9999] shadow">
-  <div class="container mx-auto px-4 h-14 flex items-center justify-between">
+<!-- ================== MENU NOVO ================== -->
+<style>
+  /* ESTILOS ISOLADOS PARA NÃO CONFLITAR COM NADA */
+  .dp-menu-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #ffffffee;
+    backdrop-filter: blur(12px);
+    border-bottom: 1px solid #e2e8f0;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    z-index: 999999; /* SEM CHANCE DE FICAR ATRÁS DE ALGO */
+  }
+
+  .dp-menu {
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 20px;
+    height: 62px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .dp-menu-logo {
+    font-size: 20px;
+    font-weight: 800;
+    color: #0f172a;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .dp-menu-links {
+    display: flex;
+    gap: 26px;
+    font-size: 15px;
+    font-weight: 500;
+    color: #334155;
+  }
+
+  .dp-menu-links a {
+    text-decoration: none;
+    color: #334155;
+    transition: 0.2s;
+  }
+
+  .dp-menu-links a:hover {
+    color: #059669;
+  }
+
+  .dp-menu-cta {
+    padding: 10px 18px;
+    background: #059669;
+    color: white !important;
+    border-radius: 10px;
+    font-weight: 600;
+    text-decoration: none;
+    box-shadow: 0 4px 10px rgba(5,150,105,0.3);
+    transition: 0.2s;
+  }
+
+  .dp-menu-cta:hover {
+    background: #047857;
+  }
+
+  /* MOBILE */
+  .dp-mobile-btn {
+    display: none;
+    border: 1px solid #cbd5e1;
+    padding: 8px;
+    border-radius: 8px;
+    background: white;
+  }
+
+  .dp-mobile-menu {
+    display: none;
+    background: white;
+    border-top: 1px solid #e2e8f0;
+    padding: 15px;
+  }
+
+  .dp-mobile-menu a {
+    display: block;
+    padding: 10px 0;
+    color: #334155;
+    font-weight: 500;
+    text-decoration: none;
+  }
+
+  @media(max-width: 768px) {
+    .dp-menu-links, .dp-menu-cta {
+      display: none;
+    }
+    .dp-mobile-btn {
+      display: block;
+    }
+  }
+</style>
+
+<div class="dp-menu-wrapper">
+  <div class="dp-menu">
     
-    <!-- Logo -->
-    <a href="/" class="flex items-center gap-2 font-extrabold text-slate-900 text-lg">
-      <img src="/favicon-32x32.png" class="w-6 h-6" alt="">
-      Dieta Pronta Online
-    </a>
-
-    <!-- Menu Desktop -->
-    <div class="hidden md:flex items-center gap-6 text-sm font-medium text-slate-700">
-      <a href="/" class="hover:text-emerald-600 transition">Início</a>
-      <a href="/dieta-para-perder-barriga" class="hover:text-emerald-600 transition">Dieta para Perder Barriga</a>
-      <a href="#quiz" class="hover:text-emerald-600 transition">Quiz</a>
-      <a href="/contato" class="hover:text-emerald-600 transition">Contato</a>
-
-      <a href="#quiz" class="px-4 py-2 bg-emerald-600 text-white rounded-xl font-semibold shadow hover:bg-emerald-700 transition">
-        Fazer meu Plano
-      </a>
+    <!-- LOGO -->
+    <div class="dp-menu-logo">
+      <img src="/favicon-32x32.png" width="26" />
+      Dieta Pronta
     </div>
 
-    <!-- Botão Mobile -->
-    <button id="menuBtn" class="md:hidden p-2 rounded-lg border border-slate-400 text-slate-800">
-      <svg id="menuIcon" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="1.5">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M3 6h18M3 12h18M3 18h18" />
-      </svg>
-    </button>
+    <!-- LINKS DESKTOP -->
+    <div class="dp-menu-links">
+      <a href="/">Início</a>
+      <a href="/dieta-para-perder-barriga">Dieta para perder barriga</a>
+      <a href="#quiz">Quiz</a>
+      <a href="/contato">Contato</a>
+    </div>
 
+    <!-- BOTÃO CTA -->
+    <a href="#quiz" class="dp-menu-cta">Fazer meu plano</a>
+
+    <!-- BOTÃO MOBILE -->
+    <button id="dpMenuBtn" class="dp-mobile-btn">
+      ☰
+    </button>
   </div>
 
   <!-- MENU MOBILE -->
-  <div id="mobileMenu" class="hidden md:hidden bg-slate-100 border-t border-slate-300 px-4 py-3 space-y-3">
-    <a href="/" class="block py-2 text-slate-700 font-medium">Início</a>
-    <a href="/dieta-para-perder-barriga" class="block py-2 text-slate-700 font-medium">Dieta para Perder Barriga</a>
-    <a href="#quiz" class="block py-2 text-slate-700 font-medium">Quiz</a>
-    <a href="/contato" class="block py-2 text-slate-700 font-medium">Contato</a>
-    <a href="#quiz" class="block text-center px-4 py-3 bg-emerald-600 text-white rounded-xl font-semibold">Fazer meu Plano</a>
+  <div id="dpMobileMenu" class="dp-mobile-menu">
+    <a href="/">Início</a>
+    <a href="/dieta-para-perder-barriga">Dieta para perder barriga</a>
+    <a href="#quiz">Quiz</a>
+    <a href="/contato">Contato</a>
+    <a href="#quiz" style="color:#059669;font-weight:700">Fazer meu plano</a>
   </div>
-</nav>
+</div>
 
-<!-- Espaço para não sobrepor conteúdo -->
-<div class="h-14"></div>
+<!-- Espaço para não sobrepor o conteúdo -->
+<div style="height:62px"></div>
 
 <script>
-  const menuBtn = document.getElementById("menuBtn");
-  const mobileMenu = document.getElementById("mobileMenu");
-
-  menuBtn.addEventListener("click", () => {
-    mobileMenu.classList.toggle("hidden");
-  });
+  document.getElementById("dpMenuBtn").onclick = function() {
+    const m = document.getElementById("dpMobileMenu");
+    m.style.display = m.style.display === "block" ? "none" : "block";
+  }
 </script>
+<!-- ================== FIM MENU ================== -->
+
+  
+
+  
+
 
 
 
   
   <!-- Header -->
-  <header class="bg-white border-b border-slate-200 mt-14">
+  <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
 
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
