--- a/index.html
+++ b/index.html
@@ -278,13 +278,14 @@ fieldset.step legend {
     <!-- LINKS DESKTOP -->
     <div class="dp-menu-links">
       <a href="/">Início</a>
-      <a href="/dieta-para-perder-barriga">Dieta para perder barriga</a>
+      <a href="#quiz">Dieta para perder barriga</a>
       <a href="#quiz">Quiz</a>
-      <a href="/contato">Contato</a>
+      
     </div>
 
-    <!-- BOTÃO CTA -->
+    <!-- BOTÃO CTA 
     <a href="#quiz" class="dp-menu-cta">Fazer meu plano</a>
+    -->
 
     <!-- BOTÃO MOBILE -->
     <button id="dpMenuBtn" class="dp-mobile-btn">
@@ -295,10 +296,9 @@ fieldset.step legend {
   <!-- MENU MOBILE -->
   <div id="dpMobileMenu" class="dp-mobile-menu">
     <a href="/">Início</a>
-    <a href="/dieta-para-perder-barriga">Dieta para perder barriga</a>
+    <a href="#quiz">Dieta para perder barriga</a>
     <a href="#quiz">Quiz</a>
-    <a href="/contato">Contato</a>
-    <a href="#quiz" style="color:#059669;font-weight:700">Fazer meu plano</a>
+    <a href="#quiz" style="color:#059669;font-weight:700">Começar agora</a>
   </div>
 </div>
 
@@ -321,9 +321,9 @@ fieldset.step legend {
 
 
   
-  <!-- Header -->
+  <!-- Header 
   <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
-
+<!--
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
         <div class="h-9 w-9 rounded-2xl bg-[var(--brand)]/10 flex items-center justify-center">
@@ -338,6 +338,8 @@ fieldset.step legend {
       <a href="#quiz" class="rounded-xl px-4 py-2 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar</a>
     </div>
   </header>
+
+  -->
 
   <!-- Hero -->
   <section class="bg-gradient-to-b from-white to-slate-100">
