--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ fieldset.step legend {
     
     <!-- LOGO -->
     <div class="dp-menu-logo">
-      <img src="/favicon-32x32.png" width="26" />
+      <img src="/favicon-32x32.png" width="60" />
       Dieta Pronta
     </div>
 
@@ -279,6 +279,9 @@ fieldset.step legend {
     <div class="dp-menu-links">
       <a href="/">Início</a>
       <a href="#quiz">Dieta para perder barriga</a>
+      <a href="#quiz">Dieta Cetogenica</a>
+      <a href="#quiz">Dieta mediterranea</a>
+      <a href="#quiz">Dieta e Emagrecer</a>
       <a href="#quiz">Quiz</a>
       
     </div>
