--- a/index.html
+++ b/index.html
@@ -298,9 +298,11 @@ fieldset.step legend {
 
   <!-- MENU MOBILE -->
   <div id="dpMobileMenu" class="dp-mobile-menu">
-    <a href="/">Início</a>
-    <a href="#quiz">Dieta para perder barriga</a>
-    <a href="#quiz">Quiz</a>
+      <a href="/">Início</a>
+      <a href="#quiz">Dieta para perder barriga</a>
+      <a href="#quiz">Dieta Cetogenica</a>
+      <a href="#quiz">Dieta mediterranea</a>
+      <a href="#quiz">Dieta e Emagrecer</a>
     <a href="#quiz" style="color:#059669;font-weight:700">Começar agora</a>
   </div>
 </div>
