--- a/index.html
+++ b/index.html
@@ -582,8 +582,12 @@ fieldset.step legend {
 
   {type:'radio', q:"🎉 Última pergunta! Você seguiria um plano simples feito pra você?",
     a:["🙌 Sim, com certeza","🙂 Acho que sim","🤝 Preciso de ajuda para isso"]}
-];
 
+  {type:'radio', q:"🎉 PARABÉNS POR CHEGAR ATÉ AQUI",
+    a:["Sabemos o quanto é caro o acesso a bons profissionais da área da saúde. Uma consulta com um excelente Nutricionista 🥗 ou Endocrinologista 🩺 costuma variar entre R$ 350,00 e R$ 550,00 — e isso faz com que muitas pessoas desistam do objetivo de perder peso ⚖️ ou ganhar massa muscular 💪 Foi por isso que criamos o Dieta Pronta Online 🌐💚 Nosso site nasceu para ajudar pessoas como você, que desejam ter acesso a uma dieta de qualidade, personalizada e totalmente adaptada ao seu perfil, sem precisar gastar altos valores com consultas. ✨ Siga o passo a passo que vamos te enviar e você verá resultados surpreendentes em pouquíssimo tempo! Agora é hora de colocar o plano em prática… vamos lá? 🚀🔥"]}
+   "🙌 Sim, quero meu plano agora!" 
+    ];
+  
 
 
     var selected = new Array(QUESTIONS.length).fill(null);
